@@ -2,6 +2,7 @@
 v6.1.2-git
 ----------
 
+[mms] Fixed regression preventing ACLs from being added (Bug #12346).
 
 
 ------
